[package]
name = "racoon"
authors = ["roife <roifewu@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-as-inner = "0.3.3"
slotmap = "1.0"
itertools = "0.10.1"
clap = { version = "4.4.2", features = ["derive"] }
